--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_height="133dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/smarthome" />
+        app:srcCompat="@drawable/smarthome2" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/IDInput"
@@ -49,12 +49,6 @@
         android:layout_height="wrap_content"
         android:text="Login" />
 
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/btn_googleSignIn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-    </com.google.android.gms.common.SignInButton>
 
     <TextView
         android:id="@+id/SignupText"
@@ -71,6 +65,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="test" />
+        android:checkable="true"
+        android:text="test"
+        android:visibility="invisible" />
 
 </LinearLayout>
