--- a/app/src/main/res/layout/item_appliance.xml
+++ b/app/src/main/res/layout/item_appliance.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:backgroundTint="@android:color/white"
-        android:checkable="true"
+        android:checkable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
