--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toBottomOf="@+id/division2" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_applianceControl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
