--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -39,7 +39,7 @@
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         android:background="#E4E0E0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,35 +96,35 @@
     <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
         android:id="@+id/modes"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="190dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="10dp"
         app:alignItems="stretch"
-        app:toggle_requiredAmount="0"
-        app:toggle_selectableAmount="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/division">
+        app:layout_constraintTop_toBottomOf="@+id/division"
+        app:toggle_requiredAmount="0"
+        app:toggle_selectableAmount="1">
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
             android:id="@+id/inputMode"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "1"
+            android:tag="1"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/indoor"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="실내 모드"
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="10dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -132,19 +132,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "2"
+            android:tag="2"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/outdoor"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="외출 모드"
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="100dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -152,19 +152,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
+            android:tag="3"
             app:layout_flexGrow="1"
-            android:tag = "3"
             app:toggle_icon="@drawable/sleep"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="슬립 모드"
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="200dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -172,20 +172,20 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "4"
+            android:tag="4"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/eco"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
             app:toggle_paddingHorizontal="3dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="에코 모드"
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="300dp" />
 
     </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
@@ -209,19 +209,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "1"
+            android:tag="1"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/aircon"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="  에어컨  "
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="10dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -229,20 +229,20 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "3"
+            android:tag="3"
             app:layout_flexGrow="1"
 
             app:toggle_icon="@drawable/light"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="  무드등  "
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="100dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -250,19 +250,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "8"
+            android:tag="8"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/gasvalve"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="가스 밸브"
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="200dp" />
 
         <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
@@ -270,20 +270,20 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:tag = "7"
+            android:tag="7"
             app:layout_flexGrow="1"
             app:toggle_icon="@drawable/window"
+            app:toggle_iconGravity="top|center"
             app:toggle_iconPaddingHorizontal="5dp"
             app:toggle_iconPaddingTop="5dp"
             app:toggle_paddingHorizontal="6dp"
+            app:toggle_paddingTop="45dp"
             app:toggle_selectedBackgroundColor="#5e6fed"
             app:toggle_selectedTextColor="@android:color/white"
-            app:toggle_iconGravity="top|center"
-            app:toggle_paddingTop="45dp"
             app:toggle_text="  창 문  "
-            app:toggle_textSize="13dp"
             app:toggle_textGravity="bottom|center"
             app:toggle_textPaddingBottom="20dp"
+            app:toggle_textSize="13dp"
             tools:layout_editor_absoluteX="300dp" />
     </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>
 
