--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -347,12 +347,12 @@
 
         <ImageView
             android:id="@+id/imageView_GasValve"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView_LightMode"
-            android:layout_marginTop="35dp"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/gasvalve" />
+            android:layout_marginTop="25dp"
+            android:src="@drawable/gasvalve"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/horizontalScrollView_LightMode" />
 
         <TextView
             android:id="@+id/textView_GasValve"
@@ -387,12 +387,12 @@
 
         <ImageView
             android:id="@+id/imageView_Window"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/division_GasValve"
-            android:layout_marginTop="50dp"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/window" />
+            android:layout_marginTop="30dp"
+            android:src="@drawable/window"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/division_GasValve" />
 
         <TextView
             android:id="@+id/textView_Window"
